[package]
name = "ravenlib"
version = "1.2.4"
authors = ["nicohman <nicohman@demenses.net>"]
repository="https://git.sr.ht/~nicohman/ravenlib"
description="Library for raven theme manager"
license="GPL-3.0"
[lib]
name = "ravenlib"
path = "src/lib.rs"
[[test]]
name = "raven"
path = "tests/raven/src/main.rs"
[dependencies]
serde = "1.0.66"
serde_derive = "1.0"
serde_json = "1.0"
tar = "0.4"
reqwest = "0.9.5"
multipart = "0.15.2"
dirs = "1.0"
log = "0.4"
error-chain = "0.12.0"
[dev-dependencies]
time = "0.1"
human-panic = "1.0.1"
structopt = "0.2.10"